plugins/kotlin/idea/tests/testData/multiplatform/jvmInlineValueClass/common/common.kt
package kotlin.jvm

expect value class <!LINE_MARKER("descr='Has actuals in jvm module'")!>VC<!>(val i: Int)
